--- a/index.html
+++ b/index.html
@@ -22,5 +22,11 @@
     <h2>Your Nickname</h2>
     <br>
     <div id="nicknames"></div>
+
+    <br> <br>
+    <button id="add-name">Add Nickname</button>
+    <input type="text" id="add-or-remove" placeholder="add or remove a nickname">
+    <button id="remove-name">Remove Nickname</button>
+    <p id="check-validation"></p>
 </body>
 </html>
